tests/should_fail/recursive_types/abstract_types.stderr
error: Illegal recursive type
 --> abstract_types.rs:9:1
  |
9 | pub struct Bad(opaque::AbstractBox<Bad>);
  | ^^^^^^^^^^^^^^ ------------------------ Recursive occurrence of Bad under abstract type `opaque::AbstractBox`

error: aborting due to 1 previous error

